--- a/css/styles.css
+++ b/css/styles.css
@@ -33,12 +33,21 @@
                                                                 list-style: none;
                                                             }
                                                             
-                                                            h3 {
+                                                            .projects-title {
                                                                 font-weight: 700;
-                                                                font-size: 14px;
+                                                                font-size: 16px;
                                                                 line-height: 1.14;
                                                                 letter-spacing: 0.03em;
                                                                 text-transform: uppercase;
+                                                            }
+                                                            
+                                                            .projects-after-title {
+                                                                font-weight: 400;
+                                                                font-size: 14px;
+                                                                line-height: 1.16;
+                                                                /* identical to box height, or 187% */
+                                                                letter-spacing: 0.03em;
+                                                                color: #757575;
                                                             }
                                                             
                                                             address {
@@ -47,6 +56,15 @@
                                                             /* Logo */
                                                             
                                                             .logo {
+                                                                font-family: 'Raleway', sans-serif;
+                                                                font-weight: 700;
+                                                                font-size: 26px;
+                                                                line-height: 1.19;
+                                                                letter-spacing: 0.03em;
+                                                            }
+                                                            
+                                                            .logo-footer {
+                                                                color: #ffffff;
                                                                 font-family: 'Raleway', sans-serif;
                                                                 font-weight: 700;
                                                                 font-size: 26px;
